# bftorch

./: .env.example  .gitignore  Makefile  PROTOCOL.md  README.md  program.py  pyproject.toml
.github/workflows/: release.yml
assets/: make_icon.py
backend/: app.py  executor.py  lessons.py  netdbg.py  requirements.txt  trainer.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  editor.ts  fx.ts  hints.ts  main.ts  scene.ts  sound.ts  style.css  types.ts
tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri/src/: main.rs
tests/: test_smoke.py
